# rakuten-nint-analyzer

./: .env.example  BUDGET.yml  CLAUDE.md  LICENSE  QUICKSTART.md  README.github.md  README.md  package.json  pyproject.toml
.github/workflows/: economic-circuit-breaker.yml
python_src/: __init__.py
python_src/analyzers/: __init__.py  market_analyzer.py  price_analyzer.py  profit_calculator.py  thumbnail_analyzer.py
python_src/scoring/: __init__.py  recommendation.py  scorer.py
python_src/scrapers/: __init__.py  nint_scraper.py  rakuten_scraper.py
python_src/utils/: config.py
python_src/web/: __init__.py  api.py
python_src/web/templates/: index.html
src/: index.ts
tests/: example.test.ts
